--- a/package.json
+++ b/package.json
@@ -33,32 +33,32 @@
   "dependencies": {},
   "description": "Daemonite's Material UI is a cross-platform and fully responsive front-end interface based on Google Material Design developed using Bootstrap 4.",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "autoprefixer": "^8.4.1",
-    "babel-eslint": "^8.2.3",
+    "@babel/cli": "^7.0.0-beta.55",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "autoprefixer": "^9.0.2",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "bundlesize": "^0.17.0",
-    "cssnano": "^4.0.0-rc.2",
-    "eslint": "^4.19.1",
-    "eslint-plugin-compat": "^2.2.0",
+    "cssnano": "^4.0.5",
+    "eslint": "^5.2.0",
+    "eslint-plugin-compat": "^2.5.1",
     "htmllint-cli": "0.0.7",
-    "node-sass": "^4.9.0",
-    "npm-run-all": "^4.1.2",
+    "node-sass": "^4.9.2",
+    "npm-run-all": "^4.1.3",
     "pickadate": "^3.5.6",
-    "postcss-cli": "^5.0.0",
-    "rollup": "^0.58.2",
-    "rollup-plugin-babel": "^4.0.0-beta.4",
-    "rollup-plugin-commonjs": "^9.1.3",
+    "postcss-cli": "^6.0.0",
+    "rollup": "^0.63.5",
+    "rollup-plugin-babel": "^4.0.0-beta.7",
+    "rollup-plugin-commonjs": "^9.1.4",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "stylelint": "^9.2.0",
+    "stylelint": "^9.4.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^0.8.1",
-    "stylelint-scss": "^3.1.0",
-    "uglify-js": "^3.3.23",
-    "vnu-jar": "^18.3.0"
+    "stylelint-scss": "^3.2.0",
+    "uglify-js": "^3.4.6",
+    "vnu-jar": "^18.7.23"
   },
   "engines": {
     "node": ">=6"
@@ -115,7 +115,7 @@
     "js-build": "npm-run-all js-lint js-compile js-minify",
     "js-build-docs": "npm-run-all js-lint-docs js-minify-docs",
     "js-compile": "rollup --config build/rollup.config.js --sourcemap",
-    "js-lint": "eslint --config build/.eslintrc.json assets/js/addons && eslint --config build/.eslintrc.json assets/js/src/",
+    "js-lint": "eslint --config build/.eslintrc.json assets/js/src/",
     "js-lint-docs": "eslint --config build/.eslintrc.addon.json docs-assets/js/",
     "js-minify": "uglifyjs --compress typeofs=false --mangle --comments \"/^!/\" --source-map \"content=js/material.js.map,includeSources,url=material.min.js.map\" --output js/material.min.js js/material.js",
     "js-minify-docs": "uglifyjs --comments \"/^!/\" --mangle --output docs/js/docs.min.js \"docs-assets/js/vendor/*.js\" docs-assets/js/docs.js"
